# Industrial-3d-geometry-ai

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  app.py  pyproject.toml  requirements.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
configs/: default.yaml  gnn.yaml  multimodal.yaml  pointnet2.yaml
data/: .gitkeep  README.md
docker/: Dockerfile  requirements-docker.txt
docs/: api_reference.md  architecture.html  architecture.md  design_decisions.md  github_deployment.md  index.html  screenshot_playbook.md  technical_report.html  technical_report.md
examples/: README.md  quick_start.py
experiments/: README.md  public_benchmark_manifest.md
geofusion/: __init__.py
geofusion/data/: __init__.py  datasets.py  download.py  text_metadata.py  transforms.py
geofusion/models/: __init__.py  anomaly.py  diffusion.py  gnn_encoder.py  multimodal.py  pointnet2.py  text_encoder.py
geofusion/retrieval/: __init__.py  cross_modal.py  embeddings.py  search.py
geofusion/training/: __init__.py  losses.py  metrics.py  trainer.py
geofusion/workflows/: __init__.py  anomaly_detection.py  part_similarity.py  property_prediction.py  text_search.py
notebooks/: 01_data_exploration.ipynb  02_geometry_encoding.ipynb  03_multimodal_alignment.ipynb  04_retrieval_demo.ipynb
results/: README.md  public_metrics.json  public_metrics.md
scripts/: build_index.py  demo.py  download_data.py  evaluate.py  generate_social_assets.py  local_demo.py  public_eval.py  train_geometry.py  train_multimodal.py
tests/: __init__.py  conftest.py  test_data.py  test_models.py  test_retrieval.py
